manifests/springboot-sample-demo-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: springboot-sample-demo-ingress
spec:
  tls:
    - hosts:
      - springboot.baiduyun.com
      secretName: nginx-tls-secret
  rules:
  - host: springboot.baiduyun.com
    http:
      paths:
      - path: /
        backend:
          serviceName: springboot-sample-demo-svc
          servicePort: 8080
